--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial, sans-serif;	
-    background-image: url('img/background1.webp');
+    background-image: url('background1.webp');
 	background-size: cover;
 	background-position: center;
     /* Create the parallax scrolling effect */
