--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial, sans-serif;	
-    background-image: url('background1.webp');
+    background-image: url('img/background1.webp');
 	background-size: cover;
 	background-position: center;
     /* Create the parallax scrolling effect */
@@ -176,58 +176,15 @@ nav ul li a {
 
 /* Contact section styles */
 #contact {
-	padding: 100px 0;
+	padding: 50px 0;
 }
 
 #contact h2 {
 	font-size: 36px;
-	margin-bottom: 20px;
+	margin-bottom: 100px;
     color: #fff;
     text-align: center;
-}
 
-#contact form {
-	display: flex;
-	flex-direction: column;
-    color: #fff;
-    margin-left: 30%;
-    margin-right: 30%;
-    padding-left: 1%;
-    padding-right: 1%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: #4f434f91;
-    border-radius: 20px;
-}
-
-#contact label {
-	font-size: 18px;
-	margin-bottom: 10px;
-}
-
-#contact input,
-#contact textarea {
-	font-size: 18px;
-	padding: 10px;
-	margin-bottom: 10px;
-	border-radius: 5px;
-	border: none;
-    background-color: #fff;
-    color: #9a95a8;
-}
-
-#contact textarea {
-	height: 150px;
-}
-
-#contact button {
-	background-color: #fff;
-	color: #9a95a8;
-	padding: 10px 20px;
-	border: none;
-	border-radius: 20px;
-	font-size: 18px;
-	cursor: pointer;
 }
 
 /* Footer styles */
@@ -260,3 +217,62 @@ footer p {
 		width: 45%;
 	}
 }
+
+.social-icon ul{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+ }
+
+ .social-icon ul li{
+    list-style: none;
+    margin: 0 15px;
+ }
+
+ .social-icon ul li .fab{
+    font-size: 35px;
+    line-height: 60px;
+    transition: .3s;
+    color: #000;
+ }
+
+ .social-icon ul li a:hover{
+    color: #fff;
+ }
+
+ .social-icon ul li a{
+    position: relative;
+    display: block;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #fff;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 2);
+    transition: .6s;
+ }
+
+ .social-icon ul li a:hover{
+    transform: translate(0,-10%);
+ }
+
+ .social-icon ul li:nth-child(1) a:hover{
+    background-color: rgb(60, 132, 240);
+ }
+ 
+ .social-icon ul li:nth-child(2) a:hover{
+    background-color: rgb(247, 17, 208);
+ }
+ 
+ .social-icon ul li:nth-child(3) a:hover{
+    background-color: rgb(72, 255, 0);
+ }
+ 
+ .social-icon ul li:nth-child(4) a:hover{
+    background-color: rgb(0, 102, 255);
+ }
+ 
+ .social-icon ul li:nth-child(5) a:hover{
+    background-color: rgb(59, 58, 58);
+ }
